--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python -m pytest --cov
+  - pytest --cov
 
 after success:
   - coveralls
