--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage==4.5.2
 coveralls==1.5.1
 docopt==0.6.2
 Flask==1.0.2
+Flask-JWT==0.3.2
 gunicorn==19.9.0
 idna==2.8
 isort==4.3.4
@@ -20,6 +21,7 @@ more-itertools==4.3.0
 pep8==1.7.1
 pluggy==0.8.0
 py==1.7.0
+PyJWT==1.4.2
 pylint==2.2.2
 pytest==4.0.2
 pytest-cov==2.6.0
