--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ mccabe==0.6.1
 more-itertools==4.3.0
 pep8==1.7.1
 pluggy==0.8.0
+psycopg2==2.7.6.1
+psycopg2-binary==2.7.7
 py==1.7.0
 PyJWT==1.4.2
 pylint==2.2.2
