--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ language: python
 python:
   - 3.6
 
+services:
+  - postgresql
+
+before script:
+  - psql -c "CREATE DATABASE ireportertest;" -U postgres
+
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
 
 script:
   - pytest --cov
