--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 
 before script:
   - psql -c "CREATE DATABASE ireportertest;" -U postgres
+  - export DATABASE ireportertest
 
 install:
   - pip install -r requirements.txt
