--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ env:
     - STATE = "Testing"
 
 before script:
-  - psql -c "CREATE DATABASE ireportertest;" -U postgres
-  # - export DATABASE ireportertest
+  - psql -c "CREATE DATABASE 'ireportertest';" -U postgres
 
 install:
   - pip install -r requirements.txt
