--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ python:
 services:
   - postgresql
 
+env:
+  global:
+  - STATE='Testing'
+
 install:
   - pip install -r requirements.txt
 
 before script:
-  - psql -c "CREATE DATABASE 'ireportertest';" -U postgres
+  - "psql -c 'CREATE DATABASE ireportertest;' -U postgres"
 
 script:
   - pytest --cov=api --cov-report term-missing
