--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ env:
   global:
     - STATE = "Testing"
 
-
+before_script:
+  - "psql -c 'CREATE DATABASE ireporter;' -U postgres"
+  # - export DATABASE ireportertest
 
 install:
   - pip install -r requirements.txt
