--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - STATE = "Testing"
 
 before_script:
-  - "psql -c 'CREATE DATABASE ireporter;' -U postgres"
+  - "psql -c 'CREATE DATABASE ireportertest;' -U postgres"
   # - export DATABASE ireportertest
 
 install:
